--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 social_links:
   twitter: ZeweiChu
   github: zeweichu
-  linkedin: ZeweiChu
+  # linkedin: ZeweiChu
   # googlescholar: zC7Yy94AAAAJ
 
 
