--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ description: # >- this means to ignore newlines until "baseurl:"
   Zewei Chu's Personal Website
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-social_links:
-  twitter: ZeweiChu
-  github: zeweichu
-  # linkedin: ZeweiChu
-  # googlescholar: zC7Yy94AAAAJ
+# social_links:
+twitter_username: ZeweiChu
+github_username: zeweichu
+# linkedin: ZeweiChu
+# googlescholar: zC7Yy94AAAAJ
 
 
 # Build settings
