--- a/_data/people.yml
+++ b/_data/people.yml
@@ -34,3 +34,9 @@ dmcallester:
 hwang:
   name: Hai Wang
   url: https://ttic.uchicago.edu/~haiwang/
+boliveira:
+  name: Bruno C. d. S. Oliveira
+  url: https://i.cs.hku.hk/~bruno/
+tstorm:
+  name: Tijs van der Storm
+  url: https://homepages.cwi.nl/~storm/
