--- a/_data/people.yml
+++ b/_data/people.yml
@@ -40,3 +40,24 @@ boliveira:
 tstorm:
   name: Tijs van der Storm
   url: https://homepages.cwi.nl/~storm/
+achaudhary:
+  name: Amitabh Chaudhary
+  url: https://masters.cs.uchicago.edu/page/amitabh-chaudhary-phd
+rwillett:
+  name: Rebecca Willett
+  url: https://voices.uchicago.edu/willett/
+slu: 
+  name: Shan Lu
+  url: http://people.cs.uchicago.edu/~shanlu/
+mwachs:
+  name: Matthew Wachs
+  url: https://people.cs.uchicago.edu/~mwachs/
+greg:
+  name: Greg Shakhnarovich
+  url: https://ttic.uchicago.edu/~gregory/
+ashaw:
+  name: Adam Shaw
+  url: http://people.cs.uchicago.edu/~adamshaw/
+hgunawi:
+  name: Haryadi S. Gunawi
+  url: https://people.cs.uchicago.edu/~haryadi/
