--- a/_data/people.yml
+++ b/_data/people.yml
@@ -61,3 +61,6 @@ ashaw:
 hgunawi:
   name: Haryadi S. Gunawi
   url: https://people.cs.uchicago.edu/~haryadi/
+wiseman:
+  name: Sam Wiseman
+  url: https://swiseman.github.io/
